# tictactoe_hs

./: README.md  stack.yaml  test.hs  tictactoe-hs.cabal  tictactoe.hs
src/: tictactoe.hs
